# manodb

./: CHANGELOG.md  LICENSE  manodb.cabal
src/: ManoDB.hs
